# learn-sentence-transformers

./: README.md  pyproject.toml
try_sentence_transformers/: main.py
